@@ -44,7 +44,6 @@ VSTPlugin::VSTPlugin()
 	_pEffect=NULL;
 	h_dll=NULL;
 	instantiated=false;
-	macindex = 0;
 
 	requiresProcess=false;
 	requiresRepl=false;
@@ -173,8 +172,10 @@ int VSTPlugin::Instance(char *dllname,bool overwriteName)
 		strcpy(_sProductName,str1);
 	}
 	
-	if ( overwriteName ) memcpy(_editName,_sProductName,31);
-	_editName[31]='\0';
+	if ( overwriteName ) 
+	{
+		sprintf(_editName, "%.2X:%s",macIndex,_sProductName);
+	}
 
 // Compatibility hacks
 	if ( strcmp(_sProductName,"sc-101") == 0 ) 
@@ -560,11 +561,11 @@ long VSTPlugin::Master(AEffect *effect, long opcode, long index, long value, voi
 			{
 				if (Global::pConfig->_RecordMouseTweaksSmooth)
 				{
-					((CMainFrame *)theApp.m_pMainWnd)->m_wndView.MousePatternTweakSlide(((VSTPlugin*)effect->user)->macindex, index, f2i(opt*VST_QUANTIZATION));
+					((CMainFrame *)theApp.m_pMainWnd)->m_wndView.MousePatternTweakSlide(((VSTPlugin*)effect->user)->macIndex, index, f2i(opt*VST_QUANTIZATION));
 				}
 				else
 				{
-					((CMainFrame *)theApp.m_pMainWnd)->m_wndView.MousePatternTweak(((VSTPlugin*)effect->user)->macindex, index, f2i(opt*VST_QUANTIZATION));
+					((CMainFrame *)theApp.m_pMainWnd)->m_wndView.MousePatternTweak(((VSTPlugin*)effect->user)->macIndex, index, f2i(opt*VST_QUANTIZATION));
 				}
 			}
 			if ( ((VSTPlugin*)effect->user)->editorWnd != NULL )
@@ -809,11 +810,12 @@ long VSTPlugin::Master(AEffect *effect, long opcode, long index, long value, voi
 ///////////////////
 // VST Instrument
 ///////////////////
-VSTInstrument::VSTInstrument()
+VSTInstrument::VSTInstrument(int index)
 {
+	macIndex = index;
 	_type = MACH_VST;
 	_mode = MACHMODE_GENERATOR;
-	sprintf(_editName, "Vst2 Instr.");
+	sprintf(_editName, "%.2X:Vst2 Instr.",macIndex);
 	_program = 0;
 	for (int i=0;i<MAX_TRACKS;i++)
 	{
@@ -1247,8 +1249,9 @@ void VSTInstrument::Work(int numSamples)
 // VST Effect
 ///////////////////
 
-VSTFX::VSTFX()
+VSTFX::VSTFX(int index)
 {
+	macIndex = index;
 	for (int i=0; i<MAX_CONNECTIONS; i++)
 	{
 		_inputConVol[i] = 0.000030517578125f; // 1/32767 -> VST Plugins use the range -1.0..1.0
@@ -1256,8 +1259,7 @@ VSTFX::VSTFX()
 	VSTPlugin::VSTPlugin();
 	_type = MACH_VSTFX;
 	_mode = MACHMODE_PLUGIN;
-	sprintf(_editName, "Vst2 Fx");
-
+	sprintf(_editName, "%.2X:Vst2 Fx",macIndex);
 	_pOutSamplesL = new float[STREAM_SIZE];
 	_pOutSamplesR = new float[STREAM_SIZE];
 	inputs[0]=_pSamplesL;
